--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV = local
 PORT = 9200
-MONGO_URI=mongodb+srv://arpitshrivastava764:<pass>@cluster0.cjlwncs.mongodb.net/
+MONGO_URI=mongodb+srv://arpitshrivastava764:ujgbmWiAeuz3Pb9N@cluster0.cjlwncs.mongodb.net/
