--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-authentication",
+  "name": "backend-relo",
   "version": "1.2.6",
   "description": "User Journey",
   "main": "dist/main.js",
@@ -16,7 +16,7 @@
   "repository": {
     "type": "git"
   },
-  "author": "Credflow",
+  "author": "Relosy",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
